# genec

./: .gitignore  .pre-commit-config.yaml  ARTIFACT_README.md  COMPLETION_SUMMARY.md  Dockerfile  ECLIPSE_JDT_INTEGRATION.md  EXAMPLE.md  ExtractedClass0.java  GITHUB_PUBLICATION_CHECKLIST.md  IMPLEMENTATION_MANIFEST.md  LICENSE  PROJECT_OVERVIEW.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  Test.java  USAGE.md  add_license.py  commonsio_baseline_comparison.md  commonsio_io_utils_baseline.md  debug_output.txt  debug_output_pipeline_autobuild.txt  debug_output_pipeline_nospoon.txt  debug_output_pipeline_verify.txt  debug_output_unbuffered.txt  debug_output_unbuffered_2.txt  debug_output_unbuffered_3.txt  evaluate_genec.py  fusion_metrics_summary.md  genec_output.txt  genec_output_new_key.txt  genec_output_rat_skip.txt  genec_output_retry.txt  genec_output_selective.txt  generate_charts.py  guava_baseline_group.md  guava_decision_trace.json  guava_genec_plan.md  guava_verification_summary.md  import_log.txt  (+16 more)
.genec_backups/: ArrayUtils_20251127_140509.java  ArrayUtils_20251127_141733.java  ArrayUtils_20251127_152112.java  Booleans_20251106_035205.java  ClassUtils_20251106_030639.java  Iterables_20251127_170822.java  StringUtils_20251106_023706.java  StringUtils_20251127_120519.java  StringUtils_20251127_121353.java  StringUtils_20251127_125909.java  StringUtils_20251127_134927.java
.github/: dependabot.yml
baselines/: __init__.py  bavota_baseline.py  naive_llm_baseline.py
config/: config.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILDING_DISTRIBUTION.md  CRITICAL_FIXES_APPLIED.md  DEVELOPER_GUIDE.md  HYBRID_ANALYZER.md  IMPROVEMENTS_SUMMARY.md  PIPELINE_COMPLETE_AUDIT.md  SELECTIVE_TESTING_DESIGN.md  SELECTIVE_TESTING_IMPLEMENTATION.md  STAGE1_AUDIT.md  STAGE1_DEEP_ANALYSIS.md  STAGE2_AUDIT.md  TROUBLESHOOTING.md  TUTORIALS.md  extract_class_test_cases_guide.md  god_class_antipattern_research.md  god_class_quick_reference.md  stage6_tools_setup.md
evaluation/: README.md  candidate_benchmark_classes.md
evaluation_results/: evaluation_report_20251205_225909.json  evaluation_report_20251205_231452.json  evaluation_report_20251205_231551.json  evaluation_report_20251205_232227.json  evaluation_report_20251205_232759.json  evaluation_report_20251205_233320.json  evaluation_report_20251205_233752.json  evaluation_report_20251205_234000.json  evaluation_report_20251205_234357.json  evaluation_report_20251205_234433.json  evaluation_report_20251205_234551.json  evaluation_report_20251205_234655.json  evaluation_report_20251205_235014.json  evaluation_report_20251205_235204.json  evaluation_report_20251206_000208.json  evaluation_report_20251206_000253.json  evaluation_report_20251206_000958.json  evaluation_report_20251206_001121.json  evaluation_report_20251206_001236.json  evaluation_report_20251206_002125.json  evaluation_report_20251206_002714.json  raw_results_20251205_225909.json  raw_results_20251205_231452.json  raw_results_20251205_231551.json  raw_results_20251205_232227.json  raw_results_20251205_232759.json  raw_results_20251205_233320.json  raw_results_20251205_233752.json  raw_results_20251205_234000.json  (+13 more)
(+307 files in other folders)
